--- a/Teleopti.Ccc.WinCode/Teleopti.Ccc.WinCode.csproj
+++ b/Teleopti.Ccc.WinCode/Teleopti.Ccc.WinCode.csproj
@@ -514,6 +514,7 @@
     <Compile Include="Presentation\IReportSettingsScheduleTimeVersusTargetTimeView.cs" />
     <Compile Include="Presentation\ReportSettingsScheduleTimeVersusTargetTimePresenter.cs" />
     <Compile Include="Reporting\ReportSettingsScheduledTimePerActivity.cs" />
+    <Compile Include="Scheduling\AgentRestrictions\AgentRestrictionsDetailEffectiveRestrictionExtractor.cs" />
     <Compile Include="Scheduling\AgentRestrictions\AgentRestrictionsDetailModel.cs" />
     <Compile Include="Scheduling\AgentRestrictions\AgentRestrictionsDetailPresenter.cs" />
     <Compile Include="Scheduling\AgentRestrictions\AgentRestrictionsDisplayDataExtractor.cs" />
