#19744: moving favicon.ico to content folder
--HG--
branch : Release 7.2.362

--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Teleopti.Ccc.Web.csproj
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Teleopti.Ccc.Web.csproj
@@ -514,6 +514,7 @@
     <Content Include="Areas\MyTime\Content\Images\view_ul_states_sprite.png" />
     <Content Include="Areas\MyTime\Content\Scripts\jquery.extensions.js" />
     <Content Include="Areas\MyTime\Content\Scripts\jquery.ui.labeledinput.js" />
+    <Content Include="Content\favicon.ico" />
     <Content Include="Content\MobileDateBox\jquery.mobile.datebox-1.0.1.min.js" />
     <Content Include="Content\MobileDateBox\jquery.mobile.datebox-1.0.1.min.css" />
     <Content Include="Content\MobileDateBox\jquery.mobile.datebox-1.0.1.css" />
@@ -591,7 +592,6 @@
     <Content Include="Content\themes\mobile\images\icons-36-white.png" />
     <Content Include="Content\themes\mobile\mobile.css" />
     <Content Include="Content\themes\mobile\mobile.min.css" />
-    <Content Include="favicon.ico" />
     <Content Include="Content\Scripts\jquery-1.6.4-vsdoc.js" />
     <Content Include="Content\Scripts\jquery-1.6.4.js" />
     <Content Include="Content\Scripts\jquery-1.6.4.min.js" />
