--- a/BuildArtifacts/Web.Root.Web.config
+++ b/BuildArtifacts/Web.Root.Web.config
@@ -93,6 +93,7 @@
 			<add name="ErrorLog" type="Elmah.ErrorLogModule, Elmah" preCondition="managedHandler" />
 			<add name="ErrorMail" type="Elmah.ErrorMailModule, Elmah" preCondition="managedHandler" />
 			<add name="ErrorFilter" type="Elmah.ErrorFilterModule, Elmah" preCondition="managedHandler" />
+			<add name="Log4NetModule" type="Teleopti.Ccc.Web.Core.Logging.Log4NetModule, Teleopti.Ccc.Web" preCondition="managedHandler"/>
 		</modules>		
 		<handlers>
 			<remove name="ExtensionlessUrlHandler-Integrated-4.0" />
