#19807: default log warnings from all our assemblies
--HG--
branch : Release 7.2.362

--- a/BuildArtifacts/Web.Root.Web.config
+++ b/BuildArtifacts/Web.Root.Web.config
@@ -20,7 +20,7 @@
 			<appender-ref ref="RollingFileAppender" />
 			<level value="ERROR" />
 		</root>
-		<logger name="Teleopti.Ccc.Web">
+		<logger name="Teleopti">
 			<level value="WARN" />
 		</logger>
 		<appender name="EventLogAppender" type="log4net.Appender.EventLogAppender" >
