--- a/BuildArtifacts/Web.Root.Web.config
+++ b/BuildArtifacts/Web.Root.Web.config
@@ -29,7 +29,7 @@
 			</layout>
 		</appender>
 		<appender name="RollingFileAppender" type="log4net.Appender.RollingFileAppender">
-			<file value="log.txt" />
+			<file value="..\..\Logs\WebLog.log" />
 			<appendToFile value="true" />
 			<rollingStyle value="Size" />
 			<maxSizeRollBackups value="10" />
