--- a/Teleopti.Ccc.AnalysisServicesManager/Teleopti.Ccc.AnalysisServicesManager.csproj
+++ b/Teleopti.Ccc.AnalysisServicesManager/Teleopti.Ccc.AnalysisServicesManager.csproj
@@ -69,6 +69,12 @@
       <HintPath>..\Microsoft.AnalysisServices.AdomdClient.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="SsasBuilder">
+      <HintPath>..\packages\SsasBuilder.1.0.0\lib\Net35\SsasBuilder.dll</HintPath>
+    </Reference>
+    <Reference Include="SsasHelper">
+      <HintPath>..\packages\SsasBuilder.1.0.0\lib\Net35\SsasHelper.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
@@ -93,6 +99,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="key.snk" />
+    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include="Microsoft.Net.Client.3.5">
