--- a/Teleopti.Messaging/Teleopti.Messaging/Teleopti.Messaging.csproj
+++ b/Teleopti.Messaging/Teleopti.Messaging/Teleopti.Messaging.csproj
@@ -111,8 +111,8 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\packages\Newtonsoft.Json.4.5.7\lib\net20\Newtonsoft.Json.dll</HintPath>
     </Reference>
-    <Reference Include="SignalR.Client.Net20">
-      <HintPath>..\..\packages\SignalR.Client.Net20.0.5.2.0\lib\net20\SignalR.Client.Net20.dll</HintPath>
+    <Reference Include="SignalR.Client.Net20, Version=0.5.1.0, Culture=neutral, PublicKeyToken=0259a897762d58c9, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\SignalR.Client.Net20.0.5.2.1\lib\net20\SignalR.Client.Net20.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.configuration" />
