--- a/Teleopti.Ccc.Web/Teleopti.Ccc.WebBehaviorTest/App.config
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.WebBehaviorTest/App.config
@@ -16,9 +16,13 @@
 		</root>
 
 		<logger name="Teleopti.Ccc.WebBehaviorTest">
-			<level value="WARN" />
+			<level value="ALL" />
 		</logger>
-		
+
+		<!--<logger name="Teleopti.Ccc.Domain.Helper.PerformanceOutput">
+			<level value="ALL" />
+		</logger>-->
+
 		<appender name="ConsoleAppender" type="log4net.Appender.ConsoleAppender">
 			<layout type="log4net.Layout.PatternLayout">
 				<conversionPattern value="%date [%thread] %-5level %logger [%property{NDC}] - %message%newline" />
