--- a/Teleopti.Ccc.SmartClientPortal/Teleopti.Ccc.SmartClientPortal.Shell/Teleopti.Ccc.SmartClientPortal.Shell.csproj
+++ b/Teleopti.Ccc.SmartClientPortal/Teleopti.Ccc.SmartClientPortal.Shell/Teleopti.Ccc.SmartClientPortal.Shell.csproj
@@ -319,6 +319,10 @@
       <Project>{6A91B93B-AFD0-4074-9908-F582745FF569}</Project>
       <Name>Teleopti.Ccc.OnlineReporting</Name>
     </ProjectReference>
+    <ProjectReference Include="..\..\Teleopti.Ccc.SmartParts\Teleopti.Ccc.SmartParts.csproj">
+      <Project>{2D32D355-5660-4DD7-B45B-655363F42550}</Project>
+      <Name>Teleopti.Ccc.SmartParts</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\Teleopti.Ccc.UserTexts\Teleopti.Ccc.UserTexts.csproj">
       <Project>{98105BFE-6C3B-4C57-9141-6BD065C7E966}</Project>
       <Name>Teleopti.Ccc.UserTexts</Name>
