Added class for calculating desired shift length for list of persons

--- a/Teleopti.Ccc.DayOffPlanning/Teleopti.Ccc.DayOffPlanning.csproj
+++ b/Teleopti.Ccc.DayOffPlanning/Teleopti.Ccc.DayOffPlanning.csproj
@@ -122,6 +122,7 @@
     <Compile Include="IWorkShiftBackToLegalStateDecisionMaker.cs" />
     <Compile Include="LockableBitArrayChangesTracker.cs" />
     <Compile Include="Scheduling\DesiredShiftLengthCalculator.cs" />
+    <Compile Include="Scheduling\GroupShiftLengthDecider.cs" />
     <Compile Include="Scheduling\ShiftLengthDecider.cs" />
     <Compile Include="TuiCaseSolver.cs" />
     <Compile Include="WorkShiftBackToLegalStateBitArrayCreator.cs" />
