--- a/Teleopti.Ccc.DayOffPlanningTest/Teleopti.Ccc.DayOffPlanningTest.csproj
+++ b/Teleopti.Ccc.DayOffPlanningTest/Teleopti.Ccc.DayOffPlanningTest.csproj
@@ -129,6 +129,7 @@
     <Compile Include="ExtendReduceTimeDecisionMakerTest.cs" />
     <Compile Include="LockableBitArrayChangesTrackerTest.cs" />
     <Compile Include="Scheduling\DesiredShiftLengthCalculatorTest.cs" />
+    <Compile Include="Scheduling\GroupShiftLengthDeciderTest.cs" />
     <Compile Include="Scheduling\ShiftLengthDeciderTest.cs" />
     <Compile Include="TuiCaseSolverTest.cs" />
     <Compile Include="WorkShiftBackToLegalStateBitArrayCreatorTest.cs" />
