--- a/Teleopti.Ccc.Web/Teleopti.Ccc.WebBehaviorTest/Teleopti.Ccc.WebBehaviorTest.csproj
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.WebBehaviorTest/Teleopti.Ccc.WebBehaviorTest.csproj
@@ -48,7 +48,7 @@
     <Reference Include="log4net">
       <HintPath>..\..\packages\log4net.1.2.11\lib\net40-full\log4net.dll</HintPath>
     </Reference>
-    <Reference Include="nunit.framework">
+    <Reference Include="nunit.framework, Version=2.6.0.12051, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL">
       <HintPath>..\..\packages\NUnit.2.6.0.12054\lib\nunit.framework.dll</HintPath>
     </Reference>
     <Reference Include="SharpTestsEx">
@@ -84,9 +84,10 @@
     <Compile Include="Bindings\ColleagueStepDefinitions.cs" />
     <Compile Include="AbsenceRequestFromScheduleStepDefinitions.cs" />
     <Compile Include="Core\BrowserImpl\BrowserProcessHelpers.cs" />
-    <Compile Include="Core\BrowserImpl\FireFoxHandler.cs" />
+    <Compile Include="Core\BrowserImpl\WatiNSingleBrowserFireFoxHandler.cs" />
     <Compile Include="Core\BrowserImpl\IBrowserHandler.cs" />
-    <Compile Include="Core\BrowserImpl\IEHandler.cs" />
+    <Compile Include="Core\BrowserImpl\WatiNSingleBrowserIEHandler.cs" />
+    <Compile Include="Core\BrowserImpl\WatiNMultiBrowserIEHandler.cs" />
     <Compile Include="Data\DataContext.cs" />
     <Compile Include="PreferencesExtended.feature.cs">
       <AutoGen>True</AutoGen>
@@ -115,7 +116,7 @@
     <Compile Include="Data\User\ShiftCategoryPreferenceOnWeekday.cs" />
     <Compile Include="Data\User\UserContractSchedule.cs" />
     <Compile Include="PreferencesPeriodFeedbackStepDefinition.cs" />
-    <Compile Include="Core\TestMethods.cs" />
+    <Compile Include="Core\TestControllerMethods.cs" />
     <Compile Include="Data\User\AgentWithoutAbsenceRequestsAccess.cs" />
     <Compile Include="Data\User\AbsencePreferenceToday.cs" />
     <Compile Include="Data\User\ExistingAbsenceRequest.cs" />
@@ -368,6 +369,9 @@
     <Compile Include="WeekScheduleStepDefinitions.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="BeforeTestRun.html">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="License.xml">
       <SubType>Designer</SubType>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
