--- a/Teleopti.Ccc.Web/Teleopti.Ccc.WebBehaviorTest/App.config
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.WebBehaviorTest/App.config
@@ -19,9 +19,9 @@
 			<level value="ALL" />
 		</logger>
 
-		<logger name="Teleopti.Ccc.Domain.Helper.PerformanceOutput">
+		<!--<logger name="Teleopti.Ccc.Domain.Helper.PerformanceOutput">
 			<level value="ALL" />
-		</logger>
+		</logger>-->
 
 		<appender name="ConsoleAppender" type="log4net.Appender.ConsoleAppender">
 			<layout type="log4net.Layout.PatternLayout">
