--- a/Teleopti.Ccc.WinCode/Teleopti.Ccc.WinCode.csproj
+++ b/Teleopti.Ccc.WinCode/Teleopti.Ccc.WinCode.csproj
@@ -1313,9 +1313,7 @@
     <None Include="packages.config" />
     <None Include="ShiftCreator\ShiftCreator.cd" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Scheduling\ShiftEditor\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <BootstrapperPackage Include="Microsoft.Net.Client.3.5">
       <Visible>False</Visible>
